Fixed bug from last commit that broke Offline Mode functionality

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -44,7 +44,7 @@
                         </ion-item>
                         <!-- Displays message if the user is in offline mode and the catagory/country combination is not stored -->
                         <ion-item [hidden]="hideNoArticlesMessage">
-                            No Articles to Diplsay
+                            No Articles to Display, Currently in Offline Mode
                         </ion-item>
                         <!-- Displays the list of articles -->
                         <ion-list>
